--- a/index.html
+++ b/index.html
@@ -3858,30 +3858,33 @@ Powered by &lt;a href='http://www.tiddlywiki.com/'&gt;TiddlyWiki&lt;/a&gt;
 
 &lt;!--}}}--&gt;</pre>
 </div>
-<div title="Projects" modifier="Xihao" created="201108280828" modified="201402100339" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280828" creator="YourName" changecount="31">
-<pre>!Protein-protein interaction (Aug 2013 - now)
+<div title="Projects" modifier="Xihao" created="201108280828" modified="201606230749" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280828" creator="YourName" changecount="33">
+<pre>!BNMF(Sep 2012 - Dec 2015)
+Studying global ~DNA-DNA long-range interactions in the 3D genome. ([[project page|http://yiplab.cse.cuhk.edu.hk/bnmf/]])
+!Protein-protein interaction (Aug 2013 - Feb 2014)
 Joint project with Yu's lab.
-!3D Genome (Sep 2012 - now)
-Studying global ~DNA-DNA interactions in genomes.
 !~ProbRNA (Jan 2011 - Dec 2013)
-Modeling RNA structure probing data. 
-* The project [[homepage| https://proj26.cse.cuhk.edu.hk/trac/ProbRNA]] for internal access only.
-* RNA secondary structure sources: Rfam, FRABASE
-* [[A list of papers relating to RNA|bib/rna.html]]
+Modeling RNA structural probing data. ([[project page|http://yiplab.cse.cuhk.edu.hk/probrna/]])
 !SDR (Jan 2011 - Aug 2011)
 PDZ domains binding to peptides</pre>
 </div>
-<div title="Publications" modifier="Xihao" created="201108280827" modified="201402100339" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280827" creator="YourName" changecount="12">
+<div title="Publications" modifier="Xihao" created="201108280827" modified="201606230805" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280827" creator="YourName" changecount="25">
 <pre>[img[My Citations from Google Scholar|https://www.google.com/intl/en/images/scholar_logo_md_2011.gif][http://scholar.google.com/citations?user=m_F7wUwAAAAJ&amp;hl=en]]
-!!2012-2013
-#''Xihao Hu'', Thomas K. F. Wong, Zhi John Lu, Ting Fung Chan, Terrence Chi Kong Lau, Siu Ming Yiu and Kevin Y. Yip. [[Computational Identification of Protein Binding Sites on RNAs using High-Throughput RNA Structure-Probing Data|http://bioinformatics.oxfordjournals.org/content/early/2014/01/19/bioinformatics.btt757.full]]. //Bioinformatics//, btt757, 2013. [[Website|http://yiplab.cse.cuhk.edu.hk/probrna/]]
-!!2011
-#Kevin Y. Yip, Lukas Utz, Simon Sitwell, ''Xihao Hu'', Sachdev S. Sidhu, Benjamin E. Turk, Mark B. Gerstein and Philip M. Kim. [[Identification of Specificity Determining Residues in Peptide Recognition Domains using an Information Theoretic Approach Applied to Large-Scale Binding Maps|http://www.biomedcentral.com/1741-7007/9/53]]. //BMC Biology//, 9:53, 2011.
-!!2010 and before
-#''Hu, Xihao''; Mamitsuka, Hiroshi; Zhu, Shanfeng. [[Ensemble approaches for improving HLA Class I-peptide binding prediction | http://www.ncbi.nlm.nih.gov/pubmed/20849860]]. //Journal of Immunological Methods//, Sep 16, 2010.
-#''Hu, Xihao''; Zhou, Wenjian; Udaka, Keiko; Mamitsuka, Hiroshi; Zhu, Shanfeng. [[MetaMHC: a meta approach to predict peptides binding to MHC molecules | http://nar.oxfordjournals.org/cgi/content/full/gkq407]]. //Nucleic Acids Research//, gkq407v1-gkq407, 2010.
-#Wang, Lian*; Pan, Danling*; ''Hu, Xihao''*; Xiao, Jinyu; Gao, Yangyang; Zhang, Huifang; Zhang, Yan; Liu, Juan; Zhu, Shanfeng. [[BiodMHC: an online server for the prediction of MHC class II-peptide binding af&#64257;nity | http://www.ncbi.nlm.nih.gov/pubmed/19447377]]. //Journal of Genetics and Genomics//, 36(5):289-296, 2009. (*joint &#64257;rst-author)
-#Zhang, Wen; Liu, Juan; Niu, Yanqing; Wang, Lian; ''Hu, Xihao''. [[A Bayesian regression approach to the prediction of MHC-II binding af&#64257;nity | http://www.ncbi.nlm.nih.gov/pubmed/18562039]]. //Computer Methods and Programs in Biomedicine//, 92(1):1-7, 2008.</pre>
+!!FIRST AUTHOR
+#''Xihao Hu'', Huan Shi and Kevin Y. Yip. __A novel method for discovering local spatial clusters of genomic regions with functional relationships from DNA contact maps.__ //''Bioinformatics''//, 2016, 32 (12): i111-i120.
+#''Xihao Hu'', Yang Wu, Zhi John Lu, Kevin Y Yip. __Analysis of sequencing data for probing RNA secondary structures and protein&#8211;RNA binding in studying posttranscriptional regulations.__ //''Briefings in Bioinformatics''//, 2015, bbv106
+#''Xihao Hu'', Thomas K. F. Wong, Zhi John Lu, Ting Fung Chan, Terrence Chi Kong Lau, Siu Ming Yiu and Kevin Y. Yip. __Computational identification of protein binding sites on ~RNAs using high-throughput RNA structure-probing data.__ //''Bioinformatics''//, 2013, btt757.
+#''Xihao Hu'', Hiroshi Mamitsuka, Shanfeng Zhu. __Ensemble approaches for improving HLA Class I-peptide binding prediction.__ //''Journal of Immunological Methods''//, 2011, 30;374(1-2):47-52.
+#''Xihao Hu'', Wenjian Zhou, Keiko Udaka, Hiroshi Mamitsuka, and Shanfeng Zhu. __~MetaMHC: a meta approach to predict peptides binding to MHC molecules.__ //''Nucleic Acids Research''//, 2010, 38(2):~W474-W479.
+!!~CO-AUTHOR
+#Yuanchao Xue, Hao Qian, Jing Hu, Bing Zhou, Yu Zhou, ''Xihao Hu'', Aziz Karakhanyan, Zhiping Pang and ~Xiang-Dong Fu. __Sequential regulatory loops as key gatekeepers for neuronal reprogramming in human cells.__ //''Nature Neuroscience''//, 2016, 19;807&#8211;815.
+#Yang Wu, Binbin Shi, Xinqiang Ding, Tong Liu, ''Xihao Hu'', Kevin Y Yip, Zheng Rong Yang, David H Mathews, Zhi John Lu. __Improved prediction of RNA secondary structure by integrating the free energy model with restraints derived from experimental probing data.__ //''Nucleic Acids Research''//, 2015, 43 (15): 7247-7259.
+#Long Hu, Chao Di, Mingxuan Kai, ~Yu-Cheng T. Yang, Yang Li, Yunjiang Qiu, ''Xihao Hu'', Kevin Y. Yip, Michael Q. Zhang and Zhi John Lu. __A common set of distinct features that characterize noncoding ~RNAs across multiple species.__ //''Nucleic Acids Research''//, 2014, gku1316.
+#Guang Lan Zhang, Hifzur Rahman Ansari, Phil Bradley, Gavin C Cawley, Tomer Hertz, ''Xihao Hu'', Nebojsa Jojic, et al. __Machine Learning Competition in Immunology&#8211;Prediction of HLA class I molecules.__ //''Journal of Immunological Methods''//, 2011, 30;374(1-2):1-4.
+#Kevin Y. Yip, Lukas Utz, Simon Sitwell, ''Xihao Hu'', Sachdev S. Sidhu, Benjamin E. Turk, Mark B. Gerstein and Philip M. Kim. __Identification of specificity determining residues in peptide recognition domains using an information theoretic approach applied to large-scale binding maps.__ //''BMC Biology''//, 2011, 9:53.
+#Lian Wang, Danling Pan, ''Xihao Hu'', Jinyu Xiao, Yangyang Gao, Huifang Zhang, Yan Zhang, Juan Liu, and Shanfeng Zhu. __~BiodMHC: an online server for the prediction of MHC class ~II-peptide binding af&#64257;nity.__ //''Journal of Genetics and Genomics''//, 2009, 36(5):289-296.
+#Wen Zhang, Juan Liu, Yan Qing Niu, Lian Wang, and ''Xihao Hu''. __A Bayesian regression approach to the prediction of ~MHC-II binding affinity.__ //''Computer Methods and Programs in Biomedicine''//, 2008, 92(1):1-7.
+</pre>
 </div>
 <div title="QuickEditPackage" modifier="ELSDesignStudios" created="200801120200" modified="200903231048" tags="QuickEditPackage BasicsPackage" creator="ELSDesignStudios" changecount="1">
 <pre>This package provides a toolbar of interactive 'power tools' that you can use while editing a tiddler to quickly insert TiddlyWiki tiddler links, images, macros, etc. or common formatting sequences directly into tiddler content, as well as perform other functions (such as find/replace, sort, split, convert, etc.) that can be used to modify the current tiddler's source content in a variety of ways.
@@ -6435,7 +6438,7 @@ Goto/Search:
 <div title="SiteTitle" modifier="Xihao" created="200903111524" modified="201402120642" tags="setup" changecount="60">
 <pre>&lt;html&gt;&lt;a style=&quot;color: white&quot; href=&quot;index.html&quot;&gt;Xihao Hu&lt;/a&gt;&lt;/html&gt;</pre>
 </div>
-<div title="Skills" modifier="Xihao" created="201108280828" modified="201402211300" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280828" creator="YourName" changecount="12">
+<div title="Skills" modifier="Xihao" created="201108280828" modified="201606230745" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280828" creator="YourName" changecount="13">
 <pre>!Languages
 ;Human Language
 :Chinese, English
@@ -6453,7 +6456,8 @@ Walking randomly, Swimming, Table tennis
 You can find more from [[my collections|Motto]].
 !Evenmore
 *Blog: http://blog.sciencenet.cn/u/huxihao
-*QQ: 468164540</pre>
+*Github: https://github.com/huxihao
+*Linkedin: https://www.linkedin.com/in/xihao-hu-240933122</pre>
 </div>
 <div title="SnapshotPlugin" modifier="ELSDesignStudios" created="200804210357" modified="200906050100" tags="systemConfig BasicsPackage" creator="ELSDesignStudios">
 <pre>/***
@@ -8758,23 +8762,17 @@ config.macros.wikiCalc=config.macros.wikify;
 <div title="WindowTitle" modifier="Xihao" created="201108280831" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280831" creator="YourName">
 <pre>Xihao Hu's Homepage</pre>
 </div>
-<div title="Xihao" modifier="Xihao" created="201108280826" modified="201508220926" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280826" creator="YourName" changecount="45">
-<pre>[img[Xihao at Brooklyn bridge on Oct 13, 2013.|Xihao@BrooklynBridge.jpg]]
-{{{(No updates after Sep 2015, and newer versions may be elsewhere on the Internet)}}}
+<div title="Xihao" modifier="Xihao" created="201108280826" modified="201606230808" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280826" creator="YourName" changecount="49">
+<pre>[img[Xihao at Brooklyn bridge on Oct 13, 2013.|XihaoBrooklynBridge.jpg]]
 
-I work at the [[Institute of Biophysics|http://www.ibp.cas.cn/]], Chinese Academy of Sciences (CAS). Before that, I got the Ph.D. degree from the [[CSE department|http://www.cse.cuhk.edu.hk]] of CUHK, under the supervision of [[Prof. Kevin Yip|http://www.cse.cuhk.edu.hk/~kevinyip]]. My research area is Computational Biology and Bioinformatics. After graduation from [[WHU|http://www.whu.edu.cn/]], I worked at [[Fudan|http://www.fudan.edu.cn/]] and [[CityU|http://www.cityu.edu.hk/]], where I made some effort to predict ~MHC-peptide binding. At [[CUHK|http://www.cuhk.edu.hk]], I studied the structure probing data for RNA, and high-throughput data for the DNA 3D structure. Being supported by [[Faculty of Engineering|http://www.erg.cuhk.edu.hk/]], I had a half-year visit to [[Yu's Lab at Cornell|http://yulab.icmb.cornell.edu/]], where I studied the protein sturcture. To reach a better impact on real life, my furture works focus on structure data for DNA, RNA, proteins, or their complexes.
-!Name
+I work at the [[Institute of Biophysics|http://www.ibp.cas.cn/]], Chinese Academy of Sciences (CAS). Before that, I got the Ph.D. degree from the [[CSE department|http://www.cse.cuhk.edu.hk]] of CUHK, under the supervision of [[Prof. Kevin Yip|http://www.cse.cuhk.edu.hk/~kevinyip]]. My research area is //Computational Biology and Bioinformatics//.
+
 My Chinese name is &#32993;&#29081;&#28009;, //a.k.a.// HU XI HAO. People often call me //~Xi-Hao// or //~Hu-Xi-Hao//. English speakers have a more convenient way of calling me //~She-How// or //~Who-She-How// which pronounce same as the Chinese characters. You can remember me from [[a song|http://www.youtube.com/watch?v=5Gni33QiG0I]]:
 &gt;//Who// is she?
 &gt;//She// is God.
 &gt;//How// is it possible!
-!Mail Address
+!Email Address
 Xihao Hu &lt;huxihao@gmail.com&gt;
-
-Room 1013, Ho ~Sin-Hang Engineering Building,
-Department of Computer Science and Engineering,
-The Chinese University of Hong Kong,
-Shatin N.T. Hong Kong. 
 </pre>
 </div>
 <div title="cookieJar" modifier="Xihao" created="200903121822" modified="201108281304" tags="systemConfig BasicsPackage" creator="ELSDesignStudios" changecount="18">
