--- a/index.html
+++ b/index.html
@@ -8779,7 +8779,7 @@ Xihao Hu &lt;huxihao@gmail.com&gt;
 <pre>//{{{
 config.options.chkSinglePageMode=true;
 config.options.txtUserName=&quot;Xihao&quot;;
-readOnly=false; // TW core setting KEY 3.14159265358979323846
+readOnly=true; // TW core setting by HUXIHAO
 config.options.chkInsertTabs=true; // TW core option
 config.options.txtMaxEditRows=&quot;20&quot;; // TW core option
 config.options.chkShowLeftSidebar=true; // ToggleLeftSidebar
