--- a/index.html
+++ b/index.html
@@ -2224,14 +2224,21 @@ Where elementID is one of:
 	place.lastChild.innerHTML=expandlabel;
 &lt;/script&gt;</pre>
 </div>
-<div title="Experiences" modifier="Xihao" created="201108280827" modified="201409180915" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280827" creator="YourName" changecount="31">
-<pre>!Visiting Student
+<div title="Experiences" modifier="Xihao" created="201108280827" modified="201610032124" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280827" creator="YourName" changecount="32">
+<pre>!Research Associate
+''Leader:'' Dr. Xue, Yuanchao
+''Place:'' Institute of Biophysics, Chinese Academy of Sciences
+''Period:'' 9/2015 -- 9/2016
+''Works:'' 
+#Building pipelines for processing ~ChIP-seq, ~RNA-seq, and ~CLIP-seq data;
+#Maintaining the computational environment.
+!Visiting Student
 ''Supervisor:'' [[Dr. Lu, Zhi | http://bioinfo.life.tsinghua.edu.cn/lulab/PI.html]]
 ''Place:'' Tsinghua University
 ''Period:'' 7/2014 -- 9/2014
 ''Works:'' 
-#RNA secondary structure prediction with RNA probing information
-#Functional protein module detection from ~CLIP-seq data
+#RNA secondary structure prediction with RNA probing information.
+#Functional protein module detection from ~CLIP-seq data.
 !Teaching Assistant
 ''Place:'' The Chinese University of Hong Kong
 ''Courses:'' 
@@ -2270,12 +2277,13 @@ Where elementID is one of:
 #Developed an ensemble approach with normalization techniques and SVM.
 #Developed an on-line service named [[MetaMHC|http://www.biokdd.fudan.edu.cn/Service/MetaMHC.html]].
 !Undergraduate Researcher
-''Supervisor:'' [[Prof. Liu, Juan | http://cs.whu.edu.cn/cs2011/Teach_Cons.php?id=88]]
+''Supervisor:'' [[Dr. Liu, Juan | http://cs.whu.edu.cn/cs2011/Teach_Cons.php?id=88]]
 ''Place:'' Wuhan University, CHINA
 ''Period:'' 10/2007 -- 09/2008
 ''Works:''
 #Participated in replicating predictors based on Gibbs Sampling, Support Vector Machine.
-#Participated in constructing ~BiodMHC web server.</pre>
+#Participated in constructing ~BiodMHC web server.
+</pre>
 </div>
 <div title="FileDropPlugin" modifier="ELSDesignStudios" created="200611080217" modified="200712032022" tags="systemConfig BasicsPackage" creator="ELSDesignStudios" changecount="2">
 <pre>/***
@@ -3463,7 +3471,7 @@ config.paramifiers.tag = {
 };
 //}}}</pre>
 </div>
-<div title="Motto" modifier="Xihao" created="201108280836" modified="201208201043" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280836" creator="YourName" changecount="42">
+<div title="Motto" modifier="Xihao" created="201108280836" modified="201610032136" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280836" creator="YourName" changecount="43">
 <pre>!!What I believe
 *Meditation brings inner peace and accumulates power mentally and physically. 
 *Positive thinking makes the power to be used in a right way.
@@ -3472,7 +3480,9 @@ config.paramifiers.tag = {
 *Remembering that you are going to die is the best way I know to avoid the trap of thinking you have something to lose. You are already naked. There is no reason not to follow your heart. {{right{-- Steve Jobs &quot;Commencement Address&quot;}}}
 *&#19968;&#12289;&#26152;&#22812;&#35199;&#39118;&#20939;&#30887;&#26641;&#65292;&#29420;&#19978;&#39640;&#27004;&#65292;&#26395;&#23613;&#22825;&#28079;&#36335;&#65307; &#20108;&#12289;&#34915;&#24102;&#28176;&#23485;&#32456;&#19981;&#24724;&#65292;&#20026;&#20234;&#28040;&#24471;&#20154;&#24980;&#24756;&#65307; &#19977;&#12289;&#20247;&#37324;&#23547;&#20182;&#21315;&#30334;&#24230;&#65292;&#22238;&#22836;&#34022;&#35265;&#65292;&#37027;&#20154;&#27491;&#22312;&#28783;&#28779;&#38417;&#29642;&#22788;&#12290; {{right{-- &#29579;&#22269;&#32500; &#12298;&#20154;&#38388;&#35789;&#35805;&#12299;}}}
 *One of the mantras that I repeat over and over again to myself, to my students, is '//learn to fail or fail to learn//'. ... It's through failure that we can enjoy deep learning. It's through failure that we become more resilient and stronger. {{right{-- Tal ~Ben-Shahar &quot;Positive Psychology&quot;}}}
-*The most important thing in living was to reach out and touch perfection in that which we most loved to do. {{right{-- Richard Bach &quot;Jonathan Livingston Seagull&quot;}}}</pre>
+*The most important thing in living was to reach out and touch perfection in that which we most loved to do. {{right{-- Richard Bach &quot;Jonathan Livingston Seagull&quot;}}}
+*I had witnessed the frustration of scientists who were pursuing obvious experiments that were simultaneously being carried out in other laboratories. These scientists were constantly in a race. It had always seemed to me that, even if they were able to publish their results six months before a competing laboratory, they were unlikely to make truly unique contributions. I had used a different strategy. My approach had been that of predicting how a particular biological process might work and then taking years to test whether my guess might be right. {{right{-- Bruce Alberts &quot;Turning points, A wake-up call&quot;}}}
+</pre>
 </div>
 <div title="NestedSlidersPlugin" modifier="ELSDesignStudios" created="200512161202" modified="200811160623" tags="systemConfig BasicsPackage" creator="ELSDesignStudios" changecount="3">
 <pre>/***
@@ -8762,10 +8772,10 @@ config.macros.wikiCalc=config.macros.wikify;
 <div title="WindowTitle" modifier="Xihao" created="201108280831" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280831" creator="YourName">
 <pre>Xihao Hu's Homepage</pre>
 </div>
-<div title="Xihao" modifier="Xihao" created="201108280826" modified="201606230808" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280826" creator="YourName" changecount="49">
+<div title="Xihao" modifier="Xihao" created="201108280826" modified="201610032124" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280826" creator="YourName" changecount="50">
 <pre>[img[Xihao at Brooklyn bridge on Oct 13, 2013.|XihaoBrooklynBridge.jpg]]
 
-I work at the [[Institute of Biophysics|http://www.ibp.cas.cn/]], Chinese Academy of Sciences (CAS). Before that, I got the Ph.D. degree from the [[CSE department|http://www.cse.cuhk.edu.hk]] of CUHK, under the supervision of [[Prof. Kevin Yip|http://www.cse.cuhk.edu.hk/~kevinyip]]. My research area is //Computational Biology and Bioinformatics//.
+I'm now a post-doc in [[Shirley Liu's Lab|http://liulab.dfci.harvard.edu/]] at ~Dana-Farber Cancer Institute ([[DFCI|https://www.dana-farber.org/]]), an affiliate of Harvard Medical School. Before that, I got the Ph.D. degree from the [[CSE department|http://www.cse.cuhk.edu.hk]] of CUHK, under the supervision of [[Prof. Kevin Yip|http://www.cse.cuhk.edu.hk/~kevinyip]]. My research area is //Computational Biology and Bioinformatics//.
 
 My Chinese name is &#32993;&#29081;&#28009;, //a.k.a.// HU XI HAO. People often call me //~Xi-Hao// or //~Hu-Xi-Hao//. English speakers have a more convenient way of calling me //~She-How// or //~Who-She-How// which pronounce same as the Chinese characters. You can remember me from [[a song|http://www.youtube.com/watch?v=5Gni33QiG0I]]:
 &gt;//Who// is she?
@@ -8779,7 +8789,7 @@ Xihao Hu &lt;huxihao@gmail.com&gt;
 <pre>//{{{
 config.options.chkSinglePageMode=true;
 config.options.txtUserName=&quot;Xihao&quot;;
-readOnly=true; // TW core setting by HUXIHAO
+readOnly=true; // TW core setting by HUXIHAO for index.html
 config.options.chkInsertTabs=true; // TW core option
 config.options.txtMaxEditRows=&quot;20&quot;; // TW core option
 config.options.chkShowLeftSidebar=true; // ToggleLeftSidebar
