--- a/index.html
+++ b/index.html
@@ -3860,8 +3860,6 @@ if (version.major+.1*version.minor+.01*version.revision&gt;=2.2) {
 
 &lt;div id='footer'&gt;
 &lt;div style='color:#666666; text-align:center; padding: 4em'&gt;
-&lt;a href='http://www.cse.cuhk.edu.hk/'&gt;Department of Computer Science and Engineering&lt;/a&gt;, &lt;br/&gt;
-The Chinese University of Hong Kong.
 Powered by &lt;a href='http://www.tiddlywiki.com/'&gt;TiddlyWiki&lt;/a&gt;
 &lt;/div&gt;
 &lt;/div&gt;
@@ -8772,10 +8770,10 @@ config.macros.wikiCalc=config.macros.wikify;
 <div title="WindowTitle" modifier="Xihao" created="201108280831" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280831" creator="YourName">
 <pre>Xihao Hu's Homepage</pre>
 </div>
-<div title="Xihao" modifier="Xihao" created="201108280826" modified="201610032124" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280826" creator="YourName" changecount="50">
+<div title="Xihao" modifier="Xihao" created="201108280826" modified="201610072030" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280826" creator="YourName" changecount="51">
 <pre>[img[Xihao at Brooklyn bridge on Oct 13, 2013.|XihaoBrooklynBridge.jpg]]
 
-I'm now a post-doc in [[Shirley Liu's Lab|http://liulab.dfci.harvard.edu/]] at ~Dana-Farber Cancer Institute ([[DFCI|https://www.dana-farber.org/]]), an affiliate of Harvard Medical School. Before that, I got the Ph.D. degree from the [[CSE department|http://www.cse.cuhk.edu.hk]] of CUHK, under the supervision of [[Prof. Kevin Yip|http://www.cse.cuhk.edu.hk/~kevinyip]]. My research area is //Computational Biology and Bioinformatics//.
+I'm now a post-doc in [[Shirley Liu's Lab|http://liulab.dfci.harvard.edu/]] at ~Dana-Farber Cancer Institute ([[DFCI|https://www.dana-farber.org/]]), an affiliate of Harvard University. Before that, I got the Ph.D. degree from the [[CSE department|http://www.cse.cuhk.edu.hk]] of Chinese University of Hong Kong, under the supervision of [[Prof. Kevin Yip|http://www.cse.cuhk.edu.hk/~kevinyip]]. My research area is //Computational Biology and Bioinformatics//.
 
 My Chinese name is &#32993;&#29081;&#28009;, //a.k.a.// HU XI HAO. People often call me //~Xi-Hao// or //~Hu-Xi-Hao//. English speakers have a more convenient way of calling me //~She-How// or //~Who-She-How// which pronounce same as the Chinese characters. You can remember me from [[a song|http://www.youtube.com/watch?v=5Gni33QiG0I]]:
 &gt;//Who// is she?
