--- a/index.html
+++ b/index.html
@@ -8771,14 +8771,15 @@ config.macros.wikiCalc=config.macros.wikify;
 <pre>Xihao Hu's Homepage</pre>
 </div>
 <div title="Xihao" modifier="Xihao" created="201108280826" modified="201610072030" server.type="file" server.host="file:///C:/Users/localuser/Desktop/homepage/index_old.html" server.page.revision="201108280826" creator="YourName" changecount="51">
-<pre>[img[Xihao at Brooklyn bridge on Oct 13, 2013.|XihaoBrooklynBridge.jpg]]
+<pre>[img[Xihao at home in Chestnut Hill on Oct 6, 2018.|XihaoAtHome2018.jpg]]
 
-I'm now a post-doc in [[Shirley Liu's Lab|http://liulab.dfci.harvard.edu/]] at ~Dana-Farber Cancer Institute ([[DFCI|https://www.dana-farber.org/]]), an affiliate of Harvard University. Before that, I got the Ph.D. degree from the [[CSE department|http://www.cse.cuhk.edu.hk]] of Chinese University of Hong Kong, under the supervision of [[Prof. Kevin Yip|http://www.cse.cuhk.edu.hk/~kevinyip]]. My research area is //Computational Biology and Bioinformatics//.
+I'm a post-doc in [[Shirley Liu's Lab|http://liulab.dfci.harvard.edu/]] at ~Dana-Farber Cancer Institute ([[DFCI|https://www.dana-farber.org/]]), an affiliate of Harvard University. Before that, I got the Ph.D. degree from the [[CSE department|http://www.cse.cuhk.edu.hk]] of Chinese University of Hong Kong, under the supervision of [[Prof. Kevin Yip|http://www.cse.cuhk.edu.hk/~kevinyip]]. My research area is //Computational Biology and Bioinformatics//.
 
-My Chinese name is &#32993;&#29081;&#28009;, //a.k.a.// HU XI HAO. People often call me //~Xi-Hao// or //~Hu-Xi-Hao//. English speakers have a more convenient way of calling me //~She-How// or //~Who-She-How// which pronounce same as the Chinese characters. You can remember me from [[a song|http://www.youtube.com/watch?v=5Gni33QiG0I]]:
+My Chinese name is &#32993;&#29081;&#28009;, //a.k.a.// HU XI HAO. People often call me //~Xi-Hao// or //~Hu-Xi-Hao//. English speakers have a more convenient way of calling me //~She-How// or //~Who-She-How// which pronounce same as the Chinese characters. You can remember it from [[a song|http://www.youtube.com/watch?v=5Gni33QiG0I]]:
 &gt;//Who// is she?
 &gt;//She// is God.
 &gt;//How// is it possible!
+My English name is ''Sherlock'', because it starts with //She// and I love the logical reasoning by [[Sherlock Holmes|https://en.wikipedia.org/wiki/Sherlock_Holmes]].
 !Email Address
 Xihao Hu &lt;huxihao@gmail.com&gt;
 </pre>
@@ -8787,7 +8788,7 @@ Xihao Hu &lt;huxihao@gmail.com&gt;
 <pre>//{{{
 config.options.chkSinglePageMode=true;
 config.options.txtUserName=&quot;Xihao&quot;;
-readOnly=true; // TW core setting by HUXIHAO for index.html
+readOnly=true; // TW core setting and KEY for index.html
 config.options.chkInsertTabs=true; // TW core option
 config.options.txtMaxEditRows=&quot;20&quot;; // TW core option
 config.options.chkShowLeftSidebar=true; // ToggleLeftSidebar
